# metalstats

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/metalstats/: __about__.py  database.py  main.py  models.py  routers.py  utils.py
src/metalstats/static/: script.js  style.css
src/metalstats/templates/: about.html  base.html  index.html  po-tos.html  showcase.html
