[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metalstats"
dynamic = ["version"]
description = 'API that turns your Spotify top tracks into a grid of album covers.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "beucismis", email = "beucismis@tutamail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "uvicorn==0.35.0",
  "fastapi==0.116.1",
  "spotipy==2.25.1",
  "pillow==11.3.0",
  "requests==2.32.5",
  "pydantic-settings==2.10.1",
]

[project.urls]
Source = "https://github.com/beucismis/metalstats"
Issues = "https://github.com/beucismis/metalstats/issues"
Documentation = "https://github.com/beucismis/metalstats#readme"

[tool.hatch.version]
path = "src/metalstats/__about__.py"

[tool.hatch.envs.default.scripts]
format = "black -l 120 ."
metalstats = "uvicorn src.metalstats.main:app --reload"
